feat: implement ArgoCD CLI integration with embedding binaries and add tests
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/src/Devantler.ArgoCDCLI/Devantler.ArgoCDCLI.csproj
+++ b/src/Devantler.ArgoCDCLI/Devantler.ArgoCDCLI.csproj
@@ -9,25 +9,22 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
-    <UseCurrentRuntimeIdentifier>true</UseCurrentRuntimeIdentifier>
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.4" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-    <PackageReference Include="xunit" Version="2.9.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2" />
+    <PackageReference Include="CLIWrap" Version="3.8.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Example\Example.csproj" />
+    <Content Include="runtimes/*/native/*">
+      <Link>%(Filename)%(Extension)</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <PackagePath>runtimes/</PackagePath>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
+    <InternalsVisibleTo Include="Devantler.ArgoCDCLI.Tests" />
   </ItemGroup>
-
-
 </Project>
