--- a/tests/Devantler.ArgoCDCLI.Tests/Devantler.ArgoCDCLI.Tests.csproj
+++ b/tests/Devantler.ArgoCDCLI.Tests/Devantler.ArgoCDCLI.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Devantler.ArgoCDCLI\Devantler.ArgoCDCLI.csproj" />
+    <ProjectReference Include="..\..\src\DevantlerTech.ArgoCDCLI\DevantlerTech.ArgoCDCLI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
