--- a/src/DevantlerTech.ArgoCDCLI/DevantlerTech.ArgoCDCLI.csproj
+++ b/src/DevantlerTech.ArgoCDCLI/DevantlerTech.ArgoCDCLI.csproj
@@ -25,6 +25,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="Devantler.ArgoCDCLI.Tests" />
+    <InternalsVisibleTo Include="DevantlerTech.ArgoCDCLI.Tests" />
   </ItemGroup>
 </Project>
